# JobPostingDemo

./: .gitignore  app.py  pyproject.toml  requirements.txt  test.py
libs/core/: .gitignore
libs/schemas/: job_posting.py
libs/services/: analyze_sounds.py  generate_posting.py  media_converter.py  web_search.py
libs/services/prompts/: business_meeting.py
libs/services/tools/: extract_info.py  htmltextextractor.py  search_tools.py
